--- a/style.css
+++ b/style.css
@@ -79,14 +79,17 @@ nav{
    background-color: #020734;
    color: aquamarine; 
    border: 2px solid aquamarine;
-   border-radius: 5px;
+   border-radius: 25px;
    margin: 0 25%;
    padding: 15px;
    cursor: pointer;
    text-decoration: none;
  }
+ 
  .btn:hover{
-   background-color: #030944;
+  cursor: pointer;
+  color: #2b9599;
+  background-color: #0a0f3d;
  }
  .leftsection{
     font-size: 3rem;
@@ -95,6 +98,10 @@ nav{
     
  }
  #about{
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  align-items: center;
+  gap: 1rem;
    padding: 0 80px;
    color: #444a80;
  }
@@ -104,19 +111,22 @@ nav{
  .about-col-1 img{
    margin-top: 3rem;
    width: 100%;
-   border-radius: 15px;
+   border-radius:350px;
+   border: 4px solid greenyellow;
+   max-width: 500px;
+   height: auto;
  }
 
  .about-col-2{
     flex-basis: 65%;
  }
 
- .subtitle{
-   font-size: 50px;
+ .about-col-2 h1{
+   font-size: 2.5rem;
    font-weight: 600;
-   color: #aaafdb;
+   color: #f1f5f4;
  }
- .subtitle:hover{
+ .about-col-2 h1:hover{
    text-decoration: underline;
    color: #aaafdb;
  }
@@ -127,33 +137,52 @@ nav{
    flex-wrap: wrap;
  }
  .para1{
-   color:#5d8fb3;
-   font-weight: 900;
+  color: #6faedb;
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   font-size: var(--p-font);
+   line-height: 1.8;
+   margin-bottom: 3rem;
  }
  .para2{
   margin-top: 30px;
   color:#5d8fb3;
   font-weight: 900;
 }
-.para3{
-  margin-top: 30px;
-  color:#5d8fb3;
-  font-weight: 900;
-}
- .para1:hover{
-   color: #6faedb;
- }
  .para2:hover{
-  color: #6faedb;;
+  color: #6faedb;
 }
-.para3:hover{
-  color: #6faedb;;
+.button{
+  width: 150px;
+   height: auto;
+   background-color: #020734;
+   color: aquamarine; 
+   border: 2px solid aquamarine;
+   border-radius: 15px;
+   padding: 5px;
+   margin-top: 30px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   text-decoration: none;
 }
+
+.button:hover{
+  cursor: pointer;
+  color: #2b9599;
+  background-color: #071063;
+}
+
 #skills {
   margin: 50px 0;
   background-color: #020734;
   padding: 20px;
   position: relative;
+  font-family: 'Arial', sans-serif;
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: 100vh; /* Set min-height for the body */
 }
 
 /* styling skill section */
@@ -161,51 +190,63 @@ nav{
   background-color:#020734;
   padding: 20px;
   margin: 10px;
-  border: 2px solid rgb(25, 97, 73);
+  border: 2px solid #09e5ed;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(100, 93, 93, 0.1);
   position: relative;
   z-index: 1;
 }
-.skillf{
-  margin-top: 10%;
-  font-size: 2.5rem;
-  color: #aaafdb;
-  margin-left: 20px;
+ .skillf{
+  display: flex;
+  align-items: center;
+  margin-top: 5%;
+  font-size: 2.3rem;
+  color: #f1f5f4;
+  margin-left: 5%;
 }
 .skillf:hover{
   text-decoration: underline;
   color:#aaafdb ;
 }
-.skill h3 {
+.skills h2 {
   font-size: 1.2rem;
   color: #7a7474;
 }
-.skill h3:hover {
-  text-decoration: underline;
-  color: #7a7474;
-}
 
-.skill p {
-  color: #c4baba;
+.skillp{
+  margin-left: 5%;
+  font-size: 1.2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #7a7474;
+  border-radius: none;
 }
   
  /* Style the card container */
 .card {
-  max-width: 300px;
-  border: 2px solid rgb(25, 97, 73);
+  max-width: 200px;
+  /* height: 200px; */
+  border: 2px solid rgb(107, 237, 194);
   border-radius: 5px;
   margin: 20px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
+  flex: 0 1 calc(25% - 20px); /* 25% for each card with 20px margin */
+  overflow: hidden;
+  display: inline-block;
+  transition: all .45s ease;
+  /* box-shadow: 0 4px 8px rgba(255, 253, 253, 0.1); */
 }
 
-/* Style the project image */
+.card:hover{
+  background-color:#4150d8;
+  transform: translateY(-8px);
+  cursor: pointer;
+}
 .card img {
-  max-width: 100%;
-  height: auto;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  width: 100%;
+  height: 100px;
+  object-fit: contain;
+  margin-top: 10px;
 }
 
 /* Style the card content */
@@ -229,7 +270,7 @@ nav{
 
 }
 
-.card a {
+/* .card a {
   display: inline-block;
   padding: 10px 20px;
   background-color: #020734;
@@ -245,14 +286,80 @@ nav{
   text-decoration: underline;
   color: aquamarine;
   background-color: #090f46;
+} */
+
+/* styling the project section */
+
+.portfolio{
+  display:grid;
+  grid-template-columns: repeat(auto-fit,minmax(350px,auto));
+  align-items: center;
+  gap: 2.5rem;
+  margin-top: 5rem;
+}
+.projectrow{
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
-/* Center the card horizontally */
+.projectrow img{
+  width: 100%;
+  border-radius: 8px;
+  display: block;
+  transition: transform 0.5s;
+}
 
-.card-container {
+.layer{
+  width: 100%;
+  height: 0;
+  background: linear-gradient(rgba(155, 154, 154, 0.1), #0b3d58);
+  position: absolute;
+  border-radius: 8px;
+  left:0;
+  bottom: 0;
+  overflow: hidden;
   display: flex;
-  justify-content:space-evenly;
-} 
+  flex-direction: column;
+  align-items: center;
+  padding: 0 40px;
+  transition: height 0.5s;
+}
+
+.layer h5{
+  font: 20px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.layer p{
+  color:rgb(107, 213, 237);
+  font-size: 1rem;
+  line-height: 1.8;
+}
+
+.layer i{
+  color: #00a6ff;
+  margin-top: 20px;
+  font-size: 20px;
+  background: #2b9599;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+}
+
+.projectrow:hover img{
+  transform: scale(1.1);
+}
+
+.projectrow:hover .layer{
+  height: 100%;
+}
+
 
 /* styling hire me section */
 .Contact-left{
@@ -307,3 +414,4 @@ label{
   font-family: sans-serif;
   font-size: 18px;
 } */
+
